<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
     <string name="str_checkversiontext">正在检测安全支付服务版本</string>
    <string name="str_dia2_headlinetext">确认退出支付</string>
    <string name="str_dia2msgtext">交易未完成，是否结束支付？</string>
    <string name="str_btn_back_text">确认退出</string>
    <string name="str_btn_goon_text">继续支付</string>
    <string name="main_activity_radiobtn_bankcard_title">快钱</string>
    <string name="main_activity_radiobtn_alipay_title">支付宝</string>
    <string name="main_activity_radiobtn_unicom_title">联通</string>
    <string name="main_activity_menu_bank_card_manger">银行卡管理</string>
    <string name="main_activity_menu_phone_manger">手机号管理</string>
    <string name="main_activity_menu_qrcode">二维码扫描</string>
    <string name="main_activity_menu_custom_service">客服服务</string>
    <string name="common_customer_view_tv_price_units">元</string>
    <string name="common_customer_view_tv_user">用户:</string>
    <string name="common_customer_view_tv_product">商品:</string>
    <string name="bankcard_fragment_tv_tip">支持农、中、建、光大、平安、华夏、民生银行的借记卡和主流银行信用卡</string>
    <string name="bankcard_fragment_btn_fast_pay">去快钱支付</string>
    <string name="bankcard_fragment_et_hint_bank">请输入银行卡号</string>
    <string name="bankcard_fragment_et_hint_life">有效期(月/年)</string>
    <string name="bankcard_fragment_et_hint_sign">签名栏后三位</string>
    <string name="bankcard_fragment_et_hint_id">持卡人身份证号</string>
    <string name="bankcard_fragment_et_hint_phone">请输入预留手机号</string>
    <string name="bank_pay_dialog_btn_hint_get_check_code">获取验证码</string>
    <string name="bank_pay_dialog_et_hint_check_code">请输入验证码</string>
    <string name="bank_pay_dialog_et_hint_bind">确定支付</string>
    <string name="bank_pay_dialog_tv_tip_message">短信验证码已发送至:</string>
    <string name="alipay_fragment_tv_tip">确认无误后去支付宝付款</string>
    <string name="alipay_fragment_btn_sure_pay">去支付宝支付</string>
    <string name="unicompay_fragment_tv_tip">请确认订单信息</string>
    <string name="unicompay_fragment_btn_sure_pay">确认话费支付</string>
    <string name="unicompay_fragment_et_hint_tip">请输入手机号</string>
    <string name="app_name">AtetPayTv</string>
    <string name="atet_qr_name">ATET钱包</string>
    <string name="phone_pay_fragment_tv_custom_service_tip">支付客服电话：400-0022-033</string>
    <string name="phone_pay_fragment_item_tv_right_tip_1">3.按&#160;</string>
    <string name="phone_pay_fragment_item_tv_right_tip_2">&#160;键获取更多帮助。</string>
    <string name="phone_pay_fragment_item_tv_left_icon_up_tip">如已下载钱包直接扫描订单</string>
    <string name="phone_pay_fragment_item_tv_left_tip_up_tip">扫描二维码下载ATET手机钱包</string>
    <string name="phone_pay_fragment_item_tv_left_icon_down_tip">目前只支持Android手机，推荐使用扫一扫、UC浏览器等系统自带工具扫描</string>
    <string name="phone_pay_fragment_item_tv_center_icon_up_string">￥0.55 </string>
    <string name="phone_pay_fragment_item_tv_center_tip_up_string">ATET手机钱包扫描订单二维码</string>
    <string name="phone_pay_fragment_item_tv_right1_string">1.ATET手机钱包支持银联、支付宝、财付通、手机话费充值。</string>
    <string name="phone_pay_fragment_item_tv_right2_string">2.打开手机钱包下载更多手机精品游戏。</string>
<string name="phone_pay_fragment_item_tv_center_tip_down_string">手机支付时请勿退出手机钱包支付界面，否则会导致支付失败</string>
    <string name="main_activity_tab_bank_card_string">银行卡一键支付</string>
    <string name="main_activity_tab_phone_pay_string">手机钱包支付&#160;&#160;&#160;</string>
    <string name="main_activity_tab_unicom_pay_string">联通专享支付&#160;&#160;&#160;</string>
    <string name="bank_pay_fragment_tv_product_string">商品名称</string>
    <string name="bank_pay_fragment_btn_add_bank_card_string">借记卡</string>
    <string name="bank_pay_fragment_btn_add_credit_card_string">信用卡</string>
    <string name="bank_pay_fragment_btn_add_bank_card_tip_string">采用银行级标准加密技术，保障您的信息安全，所有银行卡信息都不会保存在非金融机构</string>
    <string name="bank_pay_fragment_dedt_bank_card_tip_string">请输入银行卡号</string>
    <string name="bank_pay_fragment_btn_add_bank_card_sure_string">确定</string>
    <string name="bind_bank_card_dialog_btn_confirm">确定</string>
    <string name="bind_bank_card_dialog_btn_cancle">取消</string>
    <string name="bind_bank_card_dialog_tv_agree_string">同意《银行卡一键支付协议》</string>
    <string name="bind_bank_card_dialog_et_check_code_hint_string">请输入验证码</string>
    <string name="bind_bank_card_dialog_btn_check_code_string">获取验证码</string>
    <string name="bind_bank_card_dialog_et_id_hint_string">请输入身份证号码</string>
   <string name="bind_bank_card_dialog_et_name_hint_string">请输入持卡人姓名</string>
   <string name="bind_bank_card_dialog_bt_not_bz_hint_string">您的系统中不存在浏览器,请先安装浏览器</string>
   <string name="bind_bank_card_dialog_bt_agree_string">同意银行卡一键支付协议</string>
    <string name="bind_bank_card_dialog_et_phone_hint_string">请输入手机号码</string>
   <string name="bind_bank_card_dialog_et_phone_credit_life_hint_string">卡有效期(月/年)</string>
   <string name="bind_bank_card_dialog_et_phone_credit_number_hint_string">卡背面签名栏后三位</string>
    <string name="start_account_nickname">昵称 </string>
    <string name="start_account_id">ID:</string>
    <string name="start_account_username">用户名:</string>
    <string name="start_account_sure_btn">确认</string>
    <string name="start_account_register_btn">注册</string>
    <string name="start_account_login_btn">登录</string>
    <string name="start_account_title">账户配置</string>
    <string name="start_account_nickname_notnull">昵称不能为空</string>
    <string name="start_account_username_notnull">用户名不能为空</string>
    <string name="start_account_password_notnull">密码不能为空</string>
    <string name="start_account_repassword_notnull">确认密码不能为空</string>
    <string name="start_account_2password_notsame">两次密码不一致</string>
    <string name="start_account_email_notnull">邮箱不能为空</string>
    <string name="start_account_phone_notnull">电话号码不能为空</string>
    <string name="start_account_register_success">注册成功</string>
    <string name="start_account_register_fail">注册失败</string>
    <string name="start_account_login_success">登录成功</string>
    <string name="start_account_login_fail">登录失败</string>
    <string name="start_skip">跳 过</string>
    <string name="start_account_network_exception">网络不可用，请检查你的网络</string>
    <string name="launcher_account_code_login_param_error">登录参数错误</string>
    <string name="launcher_account_code_username_format_error">用户名格式错误</string>
    <string name="launcher_account_code_password_format_error">密码格式错误</string>
    <string name="launcher_account_code_chinesename_format_error">中文名格式错误</string>
    <string name="launcher_account_code_phone_format_error">手机号格式错误</string>
    <string name="launcher_account_code_email_format_error">邮箱格式错误</string>
    <string name="launcher_account_code_wechat_format_error">微信号格式错误</string>
    <string name="launcher_account_code_qq_format_error">QQ号格式错误</string>
    <string name="launcher_account_code_deviceid_format_error">设备ID格式错误</string>
    <string name="launcher_account_code_user_primary_key_error">用户主键ID无效</string>
    <string name="launcher_account_code_old_password_error">旧密码错误</string>
    <string name="launcher_account_code_new_password_error">新密码错误</string>
    <string name="launcher_account_nickname_format_error">昵称格式错误</string>
    <string name="launcher_account_user_not_exits">此用户不存在</string>
    <string name="launcher_account_user_frozen">该用户已被冻结</string>
    <string name="launcher_account_user_locked">该用户已被锁定</string>
    <string name="launcher_account_user_password_error">账号密码错误</string>
    <string name="launcher_account_register_fail">注册失败</string>
    <string name="launcher_account_user_exits">该用户已存在</string>
    <string name="launcher_account_two_password_not_match">两次输入的密码不一致</string>
    <string name="launcher_account_user_name_null">用户名为空</string>
    <string name="launcher_account_password_null">密码为空</string>
    <string name="launcher_account_email_null">邮箱为空</string>
    <string name="launcher_account_nickname_null">昵称为空</string>
    <string name="launcher_account_deviceid_error">设备id错误</string>
    <string name="launcher_account_device_code_error">设备code错误</string>
    <string name="launcher_register_username_format_error">用户名格式错误,由5-16个字母、数字或下划线组成，必须以字母开头</string>
    <string name="launcher_register_password_format_error">密码格式错误，由5-16个字母或数字组成</string>
    <string name="launcher_register_email_format_error">邮箱格式错误,请输入正确格式的邮箱</string>
    <string name="launcher_register_repassword">两次输入的密码不相同</string>
    <string name="launcher_register_nickname_format_error">昵称格式错误,</string>
    <string name="launcher_register_phone_format_error">手机号码格式不正确,必须符合手机号码格式</string>
    <string name="launcher_update_oldpassword_error">旧密码填写错误，请填写正确的密码</string>
    <string name="setting_account_login">用户登录</string>
    <string name="setting_account_login_username">用户名：</string>
    <string name="setting_account_login_username_hint">请输入用户名。</string>
    <string name="setting_account_register_title">用户注册</string>
    <string name="setting_account_register_tv_password_hint">请输入密码。</string>
    <string name="setting_account_register_tv_password">密      码：</string>
    <string name="setting_account_register_tv_repassword">确认密码：</string>
    <string name="setting_account_register_tv_email">邮箱</string>
    <string name="setting_account_register_tv_phone">手机</string>
    <string name="setting_account_register_tv_id">ID</string>
    <string name="setting_account_register_tv_tip">部分为必填项</string>
    <string name="setting_account_register_tv_tip1">带</string>
    <string name="setting_account_title">个人中心</string>
    <string name="setting_account_confirm">确认</string>
    <string name="start_account_tv_nickname">昵称:</string>
    <string name="setting_account_switchaccount">切换帐号</string>
    <string name="setting_account_findpassword">找回密码</string>
    <string name="setting_account_modifieddata">修改资料</string>
    <string name="setting_account_find">找回密码</string>
    <string name="setting_account_find_byemail">通过邮箱找回密码 </string>
    <string name="setting_account_find_byphone">通过手机找回密码</string>
    <string name="setting_account_find_byemail_mail_notmatch">输入邮箱与注册邮箱不匹配！</string>
    <string name="setting_account_find_byemail_error">密码找回失败,请检查用户名或邮箱是否正确！</string>
    <string name="setting_account_find_byemail_mail_success">成功找回密码！请使用新密码重新登录！</string>
  	<string name="down_error_disable_not_wifi">提示：已禁止非Wifi环境下载！</string>
    <string name="down_error_disconnect">网络未连接！</string>
    <string name="down_error_sd_not_mount">SD卡不可用！</string>
    <string name="code_sys_success">操作成功</string>
    <string name="code_sys_invalid_option">服务器匹配设备型号失败</string>
    <string name="code_sys_inner_error">服务器异常，请稍候再试</string>
    <string name="code_sys_illegal_opera1">非法操作</string>
    <string name="code_sys_json_parse_error">请求json格式解析错误</string>
    <string name="code_sys_request_params_error">获取请求参数错误</string>
    <string name="code_sys_invalid_token">令牌无效</string>
    <string name="code_token_create_error">创建令牌错误</string>
    <string name="code_sign_id_empty">用户ID为空</string>
    <string name="code_sign_pwd_empty">用户密码为空</string>
    <string name="code_sign_imei_empty">IMEI为空</string>
    <string name="code_sign_signature_empty">程序签名为空</string>
    <string name="code_sign_signature_pwd_empty">程序签名密码为空</string>
    <string name="code_sign_signature_invalid">程序签名验证不通过</string>
    <string name="code_game_no_required_data">没有符合要求的数据</string>
    <string name="code_game_id_not_exist">该游戏ID不存在</string>
    <string name="setting_account_register_et_tip_email">用于找回密码</string>
    <string name="setting_account_register_et_tip_phone">手机号码(用于活动领奖)</string>
    <string name="setting_account_register_et_tip_nickname">请使用汉字或字母</string>
    <string name="setting_account_register_et_tip_username">5-16位,以字母开头</string>
    <string name="setting_account_register_et_tip_pw">5-16位的密码</string>
    <string name="setting_account_register_et_tip_old_pw">5-16位的密码</string>
    <string name="setting_account_register_et_tip_new_pw">请输入新密码</string>
    <string name="user_login_pwd">密　码：</string>
</resources>