<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_pay_lin_root_right"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/phone_pay_fragment_padding" >

    <TextView
        android:id="@+id/phone_pay_fragment_item_tv_right_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/phone_pay_fragment_margin_top"
        android:gravity="left"
        android:text="@string/phone_pay_fragment_item_tv_right1_string"
        android:textSize="@dimen/payfont4" />

    <TextView
        android:id="@+id/phone_pay_fragment_item_tv_right_tip_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/phone_pay_fragment_margin_top"
        android:gravity="left"
        android:text="@string/phone_pay_fragment_item_tv_right2_string"
        android:textSize="@dimen/payfont4" />
 <LinearLayout 
     android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
         android:layout_marginTop="@dimen/phone_pay_fragment_margin_top"
        android:orientation="horizontal"
     > 
    <TextView
        android:id="@+id/phone_pay_fragment_item_tv_right_tip_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_pay_fragment_item_tv_right_tip_1"
        android:textSize="@dimen/payfont4" />
    <ImageView 
          android:layout_width="@dimen/phone_pay_fragment_iv_a_ok_w"
        android:layout_height="@dimen/phone_pay_fragment_iv_a_ok_h"
        android:src="@drawable/phone_pay_fragment_item_iv_a_ok"
        />
     <TextView
        android:id="@+id/phone_pay_fragment_item_tv_right_tip_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_pay_fragment_item_tv_right_tip_2"
        android:textSize="@dimen/payfont4" />
    </LinearLayout>

</LinearLayout>
