<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:padding="10dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
      >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          >

        <TextView
            android:id="@+id/bank_pay_dialog_tv_check_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
            android:text="请输入检验码"
            android:layout_gravity="center"
            android:textColor="#666666"
            android:textSize="@dimen/payfont8" />
       
        <Button
            android:id="@+id/bank_pay_dialog_btn_colse"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:background="@drawable/bankcard_fragment_btn_close"
            android:textColor="#666666"
            android:textSize="@dimen/payfont10" />
 </RelativeLayout>
 <View 
     android:layout_width="wrap_content"
     android:layout_height="2dp"
     android:background="#CCCCCC"
     />
 <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bank_pay_dialog_tv_tip_message"
            android:textColor="#666666"
            android:textSize="@dimen/payfont10" />
        <TextView
            android:id="@+id/bank_pay_dialog_tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="13691883466"
            android:textColor="#666666"
            android:textSize="@dimen/payfont10" />
 </LinearLayout>
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/bank_pay_dialog_et_check_code"
            android:layout_width="180dp"
            android:layout_height="@dimen/fragment_common_et_h"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:hint="@string/bank_pay_dialog_et_hint_check_code" 
            android:background="@drawable/bankcard_fragment_et_comom_selector"
            android:textColor="#666666"
	        android:inputType="number"
	        android:maxLength="6"
            android:textSize="@dimen/payfont12" />
        <Button
            android:id="@+id/bank_pay_dialog_btn_get_check_code"
            android:layout_width="90dp"
              android:layout_height="32dp"
            android:layout_gravity="center"
            android:text="@string/bank_pay_dialog_btn_hint_get_check_code"
            android:background="@drawable/common_btn_selector"
            android:layout_alignParentRight="true"
            android:textColor="@color/main_activity_rbtn_text_color"
            android:textSize="@dimen/payfont12" />
        
 </RelativeLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/bank_pay_dialog_btn_confirm"
            android:layout_width="match_parent"
           android:layout_height="32dp"
            android:layout_gravity="center"
            android:text="@string/bank_pay_dialog_et_hint_bind"
            android:background="@drawable/common_btn_selector"
            android:textColor="@color/main_activity_rbtn_text_color"
            android:textSize="@dimen/payfont10" />
 </LinearLayout>
     
    
</LinearLayout>
