<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/common_customer_view_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_customer_view_tv_marginleft" >

        <TextView
            android:id="@+id/common_customer_view_tv_price_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/payfont6"
            android:textColor="@color/mian_activity_fragment_price_color"
            android:layout_marginLeft="@dimen/common_customer_view_tv_marginleft"
             />

        <TextView
            android:id="@+id/common_customer_view_tv_price_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textSize="@dimen/payfont6"
             android:textColor="@color/mian_activity_fragment_price_color"
            android:text="@string/common_customer_view_tv_price_units" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/common_customer_view_btn_show_detail"
            android:layout_width="@dimen/common_customer_view_btn_show_detail_h_w"
            android:layout_height="@dimen/common_customer_view_btn_show_detail_h_w"
            android:layout_marginRight="@dimen/common_customer_view_btn_show_detail_marginright"
            android:background="@drawable/common_customer_view_btn_down" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/common_customer_view_linlayout_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_customer_view_tv_marginleft" >

            <TextView
                android:id="@+id/common_customer_view_tv_user_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/payfont9"
                android:textColor="@color/mian_activity_fragment_product_user_color"
                android:text="@string/common_customer_view_tv_user" />

            <TextView
                android:id="@+id/common_customer_view_tv_user_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="@dimen/payfont9"
                android:textColor="@color/mian_activity_fragment_product_user_color"
                android:layout_marginLeft="@dimen/common_customer_view_tv_marginleft"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_customer_view_tv_marginleft" >

            <TextView
                android:id="@+id/common_customer_view_tv_product_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="@dimen/payfont9"
                android:textColor="@color/mian_activity_fragment_product_user_color"
                android:text="@string/common_customer_view_tv_product" />

            <TextView
                android:id="@+id/common_customer_view_tv_product_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:textSize="@dimen/payfont9"
                android:textColor="@color/mian_activity_fragment_product_user_color"
                android:layout_marginLeft="@dimen/common_customer_view_tv_marginleft"
                 />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
